[project]
name = "moya-pythonlib-util"
version = "0.9.0"
description = "Moya Python Util Library"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Mark Zealey", email = "mark.zealey@moya.app" }
]
maintainers = [
    { name = "Mark Zealey", email = "mark.zealey@moya.app" }
]

dependencies = [
    "sentry-sdk>=2.8.0,<3.0.0",
    "opentelemetry-distro",
]

[project.optional-dependencies]
dev = [
    "black==23.3.0",
    "flake8==6.1.0",
    "Flake8-pyproject==1.2.3",
    "isort==5.12.0",
    "mypy==1.8.0",
    "poethepoet==0.22.0",
    "pytest-asyncio==0.21.0",
    "pytest-cov==4.1.0",
    "pytest-subtests==0.11.0",
    "pytest==7.1.3",
    "respx==0.20.2",
    "types-cachetools==5.3.0.7",
    "time-machine==2.16.0",
]
beartype = [
    "beartype==0.19.0",
]
kafka = [
    "aiokafka[lz4]>=0.9.0",
]
redis = [
    "redis==5.0.1",
]
pydantic-v1 = [
    "pydantic>=1.10.0,<2.0.0",
]
pydantic-v2 = [
    "pydantic>=2.0.0,<3.0.0",
    "pydantic-settings>=2.0.0,<3.0.0",
]
fastapi = [
    "fastapi>=0.115.0",
    "typing-extensions>=4.8.0",
    "sentry-sdk[fastapi]",
    "opentelemetry-instrumentation-fastapi",
    "brotli==1.1.0",
]
# List all optional deps here
all = [ "moya-pythonlib-util[beartype,kafka,redis,fastapi]" ]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["moya.middleware", "moya.util", "moya.service"]

[tool.black]
line-length = 119
target-version = ['py311']
include = '\.pyi?$'

[tool.flake8]
max-line-length = 160
max-complexity = 10
extend-ignore = "C901"

[tool.isort]
profile = "black"
multi_line_output = 3
combine_as_imports = true

[tool.mypy]
mypy_path = "stubs"
plugins = [
    "pydantic.mypy",
]
python_version = 3.11
ignore_missing_imports = true
disallow_any_generics = true   # Require list[int] instead of list
namespace_packages = true      # For OpenTelemetry to work
disallow_untyped_defs = true   # All functions should have type annotations
warn_redundant_casts = true    # Casting a variable to its own type is disallowed
strict_equality = true         # Error if both sides of a comparison are unequal
strict_optional = true         # Require explicitly specifying None
disallow_untyped_calls = true  # Don't allow calling untyped functions from typed ones
warn_return_any = true         # Don't allow returning Any from a typed function
disallow_any_unimported = true # Show warning when missing type hints cause an imported object to be Any
warn_unreachable = true        # Warn on unreachable code
enable_error_code = "redundant-expr" # Warn on redundant expressions

[[tool.mypy.overrides]]
module = ["tests.*"]
# Allow some laziness in the tests
disallow_untyped_defs = false
disallow_any_generics = false

[tool.poe.tasks]
test = "pytest . --cov=moya --cov-report=term"
"lint:flake8" = "flake8 moya/ tests/"
"lint:black" = "black --check --diff moya/ tests/"
"lint:mypy" = "mypy moya/ tests/"
lint = ["lint:flake8", "lint:black", "lint:mypy"]
"fix:black" = "black moya/ tests/"
"fix:isort" = "isort moya/ tests/"
fix = ["fix:black", "fix:isort"]

[tool.pytest.ini_options]
addopts = [ "--strict-markers" ]
asyncio_mode = "auto"
pythonpath = [ "." ]
